--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
     </application>
     <uses-sdk android:minSdkVersion="8" />
 </manifest>
