--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,8 @@
     <uses-permission android:name="com.android.vending.BILLING" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+        <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
+        <meta-data android:name="com.google.android.gms.appstate.APP_ID" android:value="@string/app_id" />
         <activity android:name="Game"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden">
@@ -35,7 +37,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
     </application>
     <uses-sdk android:minSdkVersion="8" />
 </manifest>
